[package]
name = "oneko-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.2", default-features = false, features = ["gif"] }
rand = "0.8.5"
softbuffer = "0.4.6"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging"] }
winit = { version = "0.30.5", default-features = false, features = [
  "rwh_06",
  "x11",
] }
x11rb = "0.13.1"
